--- a/index.html
+++ b/index.html
@@ -11,32 +11,38 @@
   </head>
   <body>
     <header class="header">
-      <nav>
+      <nav class="header__menu">
         <menu>
-          <ul>
-            <li>главная</li>
-            <li>посмотреть лоты</li>
-            <li>об аукционе</li>
+          <ul class="header__links-list">
+            <li class="header__links-list-item_no-bullit">главная</li>
+            <li class="header__links-list-item">посмотреть лоты</li>
+            <li class="header__links-list-item">об аукционе</li>
           </ul>
         </menu>
       </nav>
-      <a href="#">
-        <img class="logo-black" src="./images/logo-black.svg" alt="" />
+      <a href="#" class="header__logo">
+        <img class="header__logo-image" src="./images/logo-black.svg" alt="" />
       </a>
-      <address>
+      <address class="address">
         <a href="tel:+99995555555">+9(999)555-55-55</a>
         <a href="info@sobaka.ge">info@sobaka.ge</a>
-        <div>Принсенграхт 263- 265, Амстердам</div>
+        <div class="header__address">
+          Принсенграхт 263- <br />265, Амстердам
+        </div>
       </address>
     </header>
     <main>
       <section class="cover">
         <img src="./images/cover.jpg" alt="абстрактные цветы" />
         <div class="cover">
-          <h1>ОНО ТЕБЕ НАДО</h1>
+          <h1>
+            <span class=""> ОНО </span>
+            <span class=""> ТЕБЕ </span>
+            <span class=""> НАДО </span>
+          </h1>
           <div class="description">
             <p>Аукцион вещей, вкоторые никто не верил</p>
-            <button>сделать ставку</button>
+            <button class="bet-button">сделать ставку</button>
             <a href="сделать ставку"></a>
           </div>
         </div>
@@ -119,16 +125,36 @@
         <a href="info@sobaka.ge">info@sobaka.ge</a>
         Принсенграхт 263- 265, Амстердам
       </address>
-      <menu>
+      <menu class="footer__menu-link">
         <ul>
           <li>главная</li>
-          <li>посмотреть лоты</li>
+          <li class="footer__menu-link">посмотреть лоты</li>
           <li>об аукционе</li>
         </ul>
       </menu>
-      <img src="./images/yt.svg" alt="логотип ютуб" />
-      <img src="./images/vk.svg" alt="логотип вконтакте" />
-      <img src="./images/pinterest.svg" alt="логотип пинтерест" />
+      <ul class="footer__social-list">
+        <li>
+          <img
+            class="footer__social-icon"
+            src="./images/yt.svg"
+            alt="логотип ютуб"
+          />
+        </li>
+        <li>
+          <img
+            class="footer__social-icon"
+            src="./images/vk.svg"
+            alt="логотип вконтакте"
+          />
+        </li>
+        <li>
+          <img
+            class="footer__social-icon"
+            src="./images/pinterest.svg"
+            alt="логотип пинтерест"
+          />
+        </li>
+      </ul>
     </footer>
   </body>
 </html>
