Дополнила блок cover

--- a/index.html
+++ b/index.html
@@ -33,23 +33,24 @@
     </header>
     <main>
       <section class="cover">
-        <img src="./images/cover.jpg" alt="абстрактные цветы" />
-        <div class="cover">
-          <h1>
-            <span class=""> ОНО </span>
-            <span class=""> ТЕБЕ </span>
-            <span class=""> НАДО </span>
-          </h1>
-          <div class="description">
-            <p>Аукцион вещей, вкоторые никто не верил</p>
-            <button class="bet-button">сделать ставку</button>
-            <a href="сделать ставку"></a>
-          </div>
+        <div class="overlay"></div>
+
+        <h1 class="cover__title">
+          <span class="aligned-text"> ОНО </span>
+          <span class="aligned-text_center"> ТЕБЕ </span>
+          <span class="aligned-text_right"> НАДО </span>
+        </h1>
+        <div class="cover__description">
+          <p class="cover__description-text">
+            Аукцион вещей, вкоторые никто не верил
+          </p>
+          <button class="bet-button">сделать ставку</button>
+          <a href="сделать ставку"></a>
         </div>
       </section>
       <section class="lots">
-        <h2>лоты</h2>
-        <ul>
+        <h2 class="lots__heading">лоты</h2>
+        <ul class="lots__card-list">
           <li>
             <a href="" style="text-decoration: none">
               <article>
@@ -88,16 +89,16 @@
         </ul>
         <a href="">смотреть больше</a>
 
-        <img src="./images/card-lot-01.jpg" alt="" />
-        <img src="./images/card-lot-02.jpg" alt="" />
-        <img src="./images/card-lot-03.jpg" alt="" />
+        <img class="card-lot-01" src="./images/card-lot-01.jpg" alt="" />
+        <img class="card-lot-02" src="./images/card-lot-02.jpg" alt="" />
+        <img class="card-lot-03" src="./images/card-lot-03.jpg" alt="" />
         <a href="">
           <article></article>
         </a>
       </section>
       <section class="about">
         <div>
-          <img src="./images/logo-white.svg" alt="" />
+          <img class="logo-white" src="./images/logo-white.svg" alt="" />
         </div>
         <div>
           <h3>Об аукционе</h3>
