--- a/index.html
+++ b/index.html
@@ -36,9 +36,14 @@
         <div class="overlay"></div>
 
         <h1 class="cover__title">
-          <span class="aligned-text"> ОНО </span>
-          <span class="aligned-text_center"> ТЕБЕ </span>
-          <span class="aligned-text_right"> НАДО </span>
+          <span class="aligned-text">ОНО</span>
+          <span class="aligned-text aligned-text_center"
+            >ТЕ<span class="letter-spacing-extented">БЕ</span></span
+          >
+          <span class="aligned-text aligned-text_right"
+            ><span class="letter-spacing-extented">НАД</span
+            ><span class="aligned-text_right no-letter-spacing">О</span></span
+          >
         </h1>
         <div class="cover__description">
           <p class="cover__description-text">
