--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@
       <section class="lots">
         <h2 class="lots__heading">лоты</h2>
         <ul class="lots__card-list">
-          <li>
-            <a href="" style="text-decoration: none">
-              <article>
-                <span> Фильм режиссёра, который бросил киношколу </span>
-                <p>
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <article class="card card_type_film">
+                <div class="overlay"></div>
+                <p class="card__title">
+                  Фильм режиссёра, который бросил киношколу
+                </p>
+                <p class="card__text">
                   Не просто бросил, а ушёл с первой лекции. Какой была бы ваша
                   ставка, если бы вы не знали, что режиссёр — Пол Томас
                   Андерсон?
@@ -67,38 +70,45 @@
               </article>
             </a>
           </li>
-          <li>
-            <p>
-              <span>
-                Книга, где описан один скучный день из жизни рекламного агента
-              </span>
-              Объёмом почти в тысячу страниц. Иногда без знаков препинания и с
-              переходами на древнеанглийский. В ней одновременно рассказывается
-              о 16 июня 1904 года и об истории литературы, начиная с античных
-              времён. И это всё накладывается на эпическую поэму Гомера. Сколько
-              бы вы поставили на «Улисса» Джеймса Джойса?
-            </p>
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <article class="card card_type_book">
+                <div class="overlay"></div>
+                <p class="card__title">
+                  <span>
+                    Книга, где описан один скучный день из жизни рекламного
+                    агента
+                  </span>
+                </p>
+                <p class="card__text">
+                  Объёмом почти в тысячу страниц. Иногда без знаков препинания и
+                  с переходами на древнеанглийский. В ней одновременно
+                  рассказывается о 16 июня 1904 года и об истории литературы,
+                  начиная с античных времён. И это всё накладывается на
+                  эпическую поэму Гомера. Сколько бы вы поставили на «Улисса»
+                  Джеймса Джойса?
+                </p>
+              </article>
+            </a>
           </li>
-          <li>
-            <span>
-              Картина, которую повторит даже 5-летний сын маминой подруги
-            </span>
-            <p>
-              Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то
-              похожее на инфузорию-туфельку. Никаких полей, лесов, котиков...
-              Сколько бы вы на такое поставили, если бы не знали, что это — одна
-              из революционных работ Кандинского?
-            </p>
+          <li class="lots__card-list-item">
+            <a class="card-link">
+              <article class="card card_type_picture">
+                <div class="overlay"></div>
+                <p class="card__title">
+                  Картина, которую повторит даже 5-летний сын маминой подруги
+                </p>
+                <p class="card__text">
+                  Ну действительно, там линия, тут кружочек, а здесь и вовсе
+                  что-то похожее на инфузорию-туфельку. Никаких полей, лесов,
+                  котиков... Сколько бы вы на такое поставили, если бы не знали,
+                  что это — одна из революционных работ Кандинского?
+                </p>
+              </article>
+            </a>
           </li>
         </ul>
-        <a href="">смотреть больше</a>
-
-        <img class="card-lot-01" src="./images/card-lot-01.jpg" alt="" />
-        <img class="card-lot-02" src="./images/card-lot-02.jpg" alt="" />
-        <img class="card-lot-03" src="./images/card-lot-03.jpg" alt="" />
-        <a href="">
-          <article></article>
-        </a>
+        <a href="" class="lots__look-more-link">посмотреть больше</a>
       </section>
       <section class="about">
         <div>
