--- a/index.html
+++ b/index.html
@@ -111,19 +111,25 @@
         <a href="" class="lots__look-more-link">посмотреть больше</a>
       </section>
       <section class="about">
-        <div>
-          <img class="logo-white" src="./images/logo-white.svg" alt="" />
+        <div class="about__column">
+          <div class="about__logo">
+            <img
+              class="about__logo-image"
+              src="/images/logo-white.svg"
+              alt=""
+            />
+          </div>
         </div>
-        <div>
-          <h3>Об аукционе</h3>
-          <p>
+        <div class="about__column">
+          <h3 class="about__title">Об аукционе</h3>
+          <p class="about__text">
             Здесь вы не встретите очередное пафосное собрание невероятно
             дорогого антиквариата. Наши лоты вообще не должны были попасть ни на
             один аукцион. Потому что кому нужен дневник девочки-подростка или
             картина, которую может нарисовать даже ребёнок? Кому нужны все эти
             странные вещи, созданные любителями?
           </p>
-          <p>
+          <p class="about__text">
             Слишком сложные или, наоборот, слишком простые. Опережающие своё
             время. В пух и прах растерзанные критиками. Непринятые и непонятые.
             Когда-то они казались просто неудачными. Но, несмотря на критику,
