--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
   </head>
   <body>
     <header class="header">
-      <nav class="header__menu">
-        <menu>
+      <nav>
+        <menu class="header__menu">
           <ul class="header__links-list">
-            <li class="header__links-list-item_no-bullit">главная</li>
+            <li
+              class="header__links-list-item header__links-list-item_no-bullit"
+            >
+              главная
+            </li>
             <li class="header__links-list-item">посмотреть лоты</li>
             <li class="header__links-list-item">об аукционе</li>
           </ul>
@@ -27,7 +31,7 @@
         <a href="tel:+99995555555">+9(999)555-55-55</a>
         <a href="info@sobaka.ge">info@sobaka.ge</a>
         <div class="header__address">
-          Принсенграхт 263- <br />265, Амстердам
+          наб. Принсенграхт 263- <br />265, Амстердам
         </div>
       </address>
     </header>
@@ -141,39 +145,56 @@
       </section>
     </main>
     <footer class="footer">
-      <address>
+      <address class="footer__adress">
         <a href="tel:+99995555555">+9(999)555-55-55</a>
         <a href="info@sobaka.ge">info@sobaka.ge</a>
-        Принсенграхт 263- 265, Амстердам
+        наб. Принсенграхт 263-265,<br />
+        Амстердам
       </address>
-      <menu class="footer__menu-link">
-        <ul>
-          <li>главная</li>
-          <li class="footer__menu-link">посмотреть лоты</li>
-          <li>об аукционе</li>
-        </ul>
-      </menu>
+      <nav>
+        <menu class="footer__menu">
+          <ul class="footer__menu-list">
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link footer__menu-link_active" href=""
+                >главная</a
+              >
+            </li>
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link" href="">посмотреть лоты</a>
+            </li>
+            <li class="footer__menu-list-item">
+              <a class="footer__menu-link" href="">об аукционе</a>
+            </li>
+          </ul>
+        </menu>
+      </nav>
       <ul class="footer__social-list">
-        <li>
-          <img
-            class="footer__social-icon"
-            src="./images/yt.svg"
-            alt="логотип ютуб"
-          />
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="">
+            <img
+              class="footer__social-icon"
+              src="./images/yt.svg"
+              alt="логотип ютуб"
+            />
+          </a>
         </li>
-        <li>
-          <img
-            class="footer__social-icon"
-            src="./images/vk.svg"
-            alt="логотип вконтакте"
-          />
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="">
+            <img
+              class="footer__social-icon"
+              src="./images/vk.svg"
+              alt="логотип вконтакте"
+            />
+          </a>
         </li>
-        <li>
-          <img
-            class="footer__social-icon"
-            src="./images/pinterest.svg"
-            alt="логотип пинтерест"
-          />
+        <li class="footer__social-list-item">
+          <a class="footer__social-link" href="">
+            <img
+              class="footer__social-icon"
+              src="./images/pinterest.svg"
+              alt="логотип пинтерест"
+            />
+          </a>
         </li>
       </ul>
     </footer>
